# starfuSED

./: .readthedocs.yaml  README.md  README.rst  example_usage.ipynb  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  fitting.rst  index.rst  installation.rst  models.rst  photometry.rst  plotting.rst  quickstart.rst
starfused/: __init__.py  fitter.py  plotter.py  preprocess.py  spectra.py
starfused/preprocess/: query.py
